Fix compilation with new MSVC compiler for Windows CE https://bugs.webkit.org/show_bug.cgi?id=121914

Reviewed by Darin Adler.

Remove code to support older Windows CE versions, since those old
versions do not support C+11, which is required in the meantime.

* wtf/Atomics.h:
* wtf/Platform.h:


Canonical link: https://commits.webkit.org/139948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156443 268f45cc-cd09-0410-ab3c-d52691b4dbfc